# etcd-manager

./: BUILD  Makefile  README.md  WORKSPACE  analysis-config.json  cloudbuild.yaml  go.mod  go.sum
.github/workflows/: main.yml
cmd/etcd-backup/: BUILD.bazel  main.go
cmd/etcd-backup-ctl/: BUILD.bazel  main.go
cmd/etcd-dump/: BUILD.bazel  main.go
cmd/etcd-manager/: BUILD.bazel  main.go
cmd/etcd-manager-ctl/: BUILD.bazel  main.go
dev/: build-assets.sh
images/: BUILD  etcd.bzl
pkg/apis/etcd/: BUILD.bazel  etcdapi.pb.go  etcdapi.proto
pkg/backup/: BUILD.bazel  fs.go  store.go  vfs.go
pkg/backupcontroller/: BUILD.bazel  cleanup.go  controller.go
pkg/commands/: BUILD.bazel  vfs.go
pkg/contextutil/: BUILD.bazel
pkg/controller/: BUILD.bazel  commands.go  controller.go  etcdclusterstate.go  newcluster.go  peer.go  reconcile_configuration.go  restore.go  upgrade.go
pkg/dns/: BUILD.bazel
pkg/etcd/: BUILD.bazel  backup.go  etcdprocess.go  etcdserver.go  pki.go  restore.go
pkg/etcd/dump/: BUILD.bazel
pkg/etcdclient/: BUILD.bazel
pkg/etcdversions/: BUILD.bazel  mappings.go
pkg/hostmount/: BUILD.bazel
pkg/hosts/: BUILD.bazel  hosts.go  hosts_test.go
pkg/hosts/testdata/: badhostfile  emptyetcdblock  (+1 more)
pkg/ioutils/: BUILD.bazel
pkg/legacy/: BUILD.bazel  adopt.go
pkg/locking/: BUILD.bazel
pkg/metrics/: BUILD.bazel  metrics.go
pkg/pki/: BUILD.bazel  certs.go
pkg/privateapi/: BUILD.bazel  id.go  peers.go  server.go
pkg/tlsconfig/: BUILD.bazel  options.go
pkg/urls/: BUILD.bazel
pkg/volumes/: BUILD.bazel  mounter.go  nsenter_exec.go
test/integration/: BUILD.bazel  clusterformation_test.go  datapersists_test.go  resize_cluster_test.go  secure_transitions_test.go  upgradedowngrade_test.go
test/integration/harness/: BUILD.bazel  cluster.go  etcd.go  node.go
tools/: push-multiarch
tools/deb-tools/: BUILD.bazel
(+25 files in other folders)
