load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backupcontroller",
    srcs = [
        "cleanup.go",
        "controller.go",
        "parse.go",
    ],
    importpath = "kope.io/etcd-manager/pkg/backupcontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd",
        "//pkg/backup",
        "//pkg/contextutil",
        "//pkg/etcd",
        "//pkg/etcdclient",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_test(
    name = "backupcontroller_test",
    srcs = ["parse_test.go"],
    embed = [":backupcontroller"],
)
