load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "harness",
    srcs = [
        "cluster.go",
        "etcd.go",
        "node.go",
    ],
    importpath = "kope.io/etcd-manager/test/integration/harness",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/etcd",
        "//pkg/backup",
        "//pkg/commands",
        "//pkg/controller",
        "//pkg/dns",
        "//pkg/etcd",
        "//pkg/etcdclient",
        "//pkg/locking",
        "//pkg/pki",
        "//pkg/privateapi",
        "//pkg/privateapi/discovery",
        "//pkg/privateapi/discovery/vfs",
        "//pkg/tlsconfig",
        "//vendor/k8s.io/klog/v2:klog",
        "//vendor/k8s.io/kops/util/pkg/vfs",
    ],
)
